<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>fastslam</name>
    <version>0.0.0</version>
    <description>FastSLAM node</description>
    <maintainer email="isaacvandersluis@gmail.com">Isaac Vander Sluis</maintainer>
    <license>UNLICENSED</license>
    <url type="website">https://github.com/ibvandersluis/fastslam</url>
    <author email="isaacvandersluis@gmail.com">Isaac Vander Sluis</author>

    <exec_depend>helpers</exec_depend>
    <exec_depend>brookes_msgs</exec_depend>
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>

    <test_depend>ament_pep257</test_depend>
    <test_depend>ament_xmllint</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
